--- a/CTB-410/config.json
+++ b/CTB-410/config.json
@@ -14,49 +14,49 @@
 	"CTB-410-CP1": {
 		"ui": "circle-default",
         "inputdevices": [{
-           	"name": "Via1",
+           	"name": "VIA1",
             "icon": "settings_input_antenna"
         }, {
             "name": "HDMI1",
             "icon": "settings_input_hdmi"
         },{
-            "name": "Via2",
+            "name": "VIA2",
             "icon": "settings_input_antenna"
         }, {
             "name": "HDMI2",
             "icon": "settings_input_hdmi"
         }, {
-            "name": "Via3",
+            "name": "VIA3",
             "icon": "settings_input_antenna"
         }, {
             "name": "HDMI3",
             "icon": "settings_input_hdmi"
         }, {
-            "name": "Via4",
+            "name": "VIA4",
             "icon": "settings_input_antenna"
         }, {
             "name": "HDMI4",
             "icon": "settings_input_hdmi"
         }, {
-            "name": "Via5",
+            "name": "VIA5",
             "icon": "settings_input_antenna"
         }, {
             "name": "HDMI5",
             "icon": "settings_input_hdmi"
         }, {
-            "name": "Via6",
+            "name": "VIA6",
             "icon": "settings_input_antenna"
         }, {
             "name": "HDMI6",
             "icon": "settings_input_hdmi"
         }, {
-            "name": "Via7",
+            "name": "VIA7",
             "icon": "settings_input_antenna"
         }, {
             "name": "HDMI7",
             "icon": "settings_input_hdmi"
         }, {
-            "name": "Via8",
+            "name": "VIA8",
             "icon": "settings_input_antenna"
         }, {
             "name": "HDMI8",
@@ -66,10 +66,10 @@
 			"name": "D1",
 			"icon": "videocam",
 			"inputs": [
-				"Via1",
+				"VIA1",
 				"HDMI1"	
 			],
-			"defaultinput": "Via1"
+			"defaultinput": "VIA1"
 		}],
 		"audio": [{
 			"displays": [
@@ -94,49 +94,49 @@
 	"CTB-410-CP2": {
 		"ui": "circle-default",
         "inputdevices": [{
-           	"name": "Via1",
+           	"name": "VIA1",
             "icon": "settings_input_antenna"
         }, {
             "name": "HDMI1",
             "icon": "settings_input_hdmi"
         },{
-            "name": "Via2",
+            "name": "VIA2",
             "icon": "settings_input_antenna"
         }, {
             "name": "HDMI2",
             "icon": "settings_input_hdmi"
         }, {
-            "name": "Via3",
+            "name": "VIA3",
             "icon": "settings_input_antenna"
         }, {
             "name": "HDMI3",
             "icon": "settings_input_hdmi"
         }, {
-            "name": "Via4",
+            "name": "VIA4",
             "icon": "settings_input_antenna"
         }, {
             "name": "HDMI4",
             "icon": "settings_input_hdmi"
         }, {
-            "name": "Via5",
+            "name": "VIA5",
             "icon": "settings_input_antenna"
         }, {
             "name": "HDMI5",
             "icon": "settings_input_hdmi"
         }, {
-            "name": "Via6",
+            "name": "VIA6",
             "icon": "settings_input_antenna"
         }, {
             "name": "HDMI6",
             "icon": "settings_input_hdmi"
         }, {
-            "name": "Via7",
+            "name": "VIA7",
             "icon": "settings_input_antenna"
         }, {
             "name": "HDMI7",
             "icon": "settings_input_hdmi"
         }, {
-            "name": "Via8",
+            "name": "VIA8",
             "icon": "settings_input_antenna"
         }, {
             "name": "HDMI8",
@@ -146,10 +146,10 @@
 			"name": "D2",
 			"icon": "tv",
 			"inputs": [
-				"Via2",
+				"VIA2",
 				"HDMI2"	
 			],
-			"defaultinput": "Via2"
+			"defaultinput": "VIA2"
 		}],
 		"audio": [{
 			"displays": [
@@ -173,49 +173,49 @@
 	"CTB-410-CP3": {
 		"ui": "circle-default",
         "inputdevices": [{
-           	"name": "Via1",
+           	"name": "VIA1",
             "icon": "settings_input_antenna"
         }, {
             "name": "HDMI1",
             "icon": "settings_input_hdmi"
         },{
-            "name": "Via2",
+            "name": "VIA2",
             "icon": "settings_input_antenna"
         }, {
             "name": "HDMI2",
             "icon": "settings_input_hdmi"
         }, {
-            "name": "Via3",
+            "name": "VIA3",
             "icon": "settings_input_antenna"
         }, {
             "name": "HDMI3",
             "icon": "settings_input_hdmi"
         }, {
-            "name": "Via4",
+            "name": "VIA4",
             "icon": "settings_input_antenna"
         }, {
             "name": "HDMI4",
             "icon": "settings_input_hdmi"
         }, {
-            "name": "Via5",
+            "name": "VIA5",
             "icon": "settings_input_antenna"
         }, {
             "name": "HDMI5",
             "icon": "settings_input_hdmi"
         }, {
-            "name": "Via6",
+            "name": "VIA6",
             "icon": "settings_input_antenna"
         }, {
             "name": "HDMI6",
             "icon": "settings_input_hdmi"
         }, {
-            "name": "Via7",
+            "name": "VIA7",
             "icon": "settings_input_antenna"
         }, {
             "name": "HDMI7",
             "icon": "settings_input_hdmi"
         }, {
-            "name": "Via8",
+            "name": "VIA8",
             "icon": "settings_input_antenna"
         }, {
             "name": "HDMI8",
@@ -225,10 +225,10 @@
 			"name": "D3",
 			"icon": "tv",
 			"inputs": [
-				"Via3",
+				"VIA3",
 				"HDMI3"	
 			],
-			"defaultinput": "Via3"
+			"defaultinput": "VIA3"
 		}],
 		"audio": [{
 			"displays": [
@@ -252,49 +252,49 @@
 	"CTB-410-CP4": {
 		"ui": "circle-default",
         "inputdevices": [{
-           	"name": "Via1",
+           	"name": "VIA1",
             "icon": "settings_input_antenna"
         }, {
             "name": "HDMI1",
             "icon": "settings_input_hdmi"
         },{
-            "name": "Via2",
+            "name": "VIA2",
             "icon": "settings_input_antenna"
         }, {
             "name": "HDMI2",
             "icon": "settings_input_hdmi"
         }, {
-            "name": "Via3",
+            "name": "VIA3",
             "icon": "settings_input_antenna"
         }, {
             "name": "HDMI3",
             "icon": "settings_input_hdmi"
         }, {
-            "name": "Via4",
+            "name": "VIA4",
             "icon": "settings_input_antenna"
         }, {
             "name": "HDMI4",
             "icon": "settings_input_hdmi"
         }, {
-            "name": "Via5",
+            "name": "VIA5",
             "icon": "settings_input_antenna"
         }, {
             "name": "HDMI5",
             "icon": "settings_input_hdmi"
         }, {
-            "name": "Via6",
+            "name": "VIA6",
             "icon": "settings_input_antenna"
         }, {
             "name": "HDMI6",
             "icon": "settings_input_hdmi"
         }, {
-            "name": "Via7",
+            "name": "VIA7",
             "icon": "settings_input_antenna"
         }, {
             "name": "HDMI7",
             "icon": "settings_input_hdmi"
         }, {
-            "name": "Via8",
+            "name": "VIA8",
             "icon": "settings_input_antenna"
         }, {
             "name": "HDMI8",
@@ -304,10 +304,10 @@
 			"name": "D4",
 			"icon": "tv",
 			"inputs": [
-				"Via4",
+				"VIA4",
 				"HDMI4"	
 			],
-			"defaultinput": "Via4"
+			"defaultinput": "VIA4"
 		}],
 		"audio": [{
 			"displays": [
@@ -331,49 +331,49 @@
 	"CTB-410-CP5": {
 		"ui": "circle-default",
         "inputdevices": [{
-           	"name": "Via1",
+           	"name": "VIA1",
             "icon": "settings_input_antenna"
         }, {
             "name": "HDMI1",
             "icon": "settings_input_hdmi"
         },{
-            "name": "Via2",
+            "name": "VIA2",
             "icon": "settings_input_antenna"
         }, {
             "name": "HDMI2",
             "icon": "settings_input_hdmi"
         }, {
-            "name": "Via3",
+            "name": "VIA3",
             "icon": "settings_input_antenna"
         }, {
             "name": "HDMI3",
             "icon": "settings_input_hdmi"
         }, {
-            "name": "Via4",
+            "name": "VIA4",
             "icon": "settings_input_antenna"
         }, {
             "name": "HDMI4",
             "icon": "settings_input_hdmi"
         }, {
-            "name": "Via5",
+            "name": "VIA5",
             "icon": "settings_input_antenna"
         }, {
             "name": "HDMI5",
             "icon": "settings_input_hdmi"
         }, {
-            "name": "Via6",
+            "name": "VIA6",
             "icon": "settings_input_antenna"
         }, {
             "name": "HDMI6",
             "icon": "settings_input_hdmi"
         }, {
-            "name": "Via7",
+            "name": "VIA7",
             "icon": "settings_input_antenna"
         }, {
             "name": "HDMI7",
             "icon": "settings_input_hdmi"
         }, {
-            "name": "Via8",
+            "name": "VIA8",
             "icon": "settings_input_antenna"
         }, {
             "name": "HDMI8",
@@ -383,10 +383,10 @@
 			"name": "D5",
 			"icon": "tv",
 			"inputs": [
-				"Via5",
+				"VIA5",
 				"HDMI5"	
 			],
-			"defaultinput": "Via5"
+			"defaultinput": "VIA5"
 		}],
 		"audio": [{
 			"displays": [
@@ -410,49 +410,49 @@
 	"CTB-410-CP6": {
 		"ui": "circle-default",
         "inputdevices": [{
-           	"name": "Via1",
+           	"name": "VIA1",
             "icon": "settings_input_antenna"
         }, {
             "name": "HDMI1",
             "icon": "settings_input_hdmi"
         },{
-            "name": "Via2",
+            "name": "VIA2",
             "icon": "settings_input_antenna"
         }, {
             "name": "HDMI2",
             "icon": "settings_input_hdmi"
         }, {
-            "name": "Via3",
+            "name": "VIA3",
             "icon": "settings_input_antenna"
         }, {
             "name": "HDMI3",
             "icon": "settings_input_hdmi"
         }, {
-            "name": "Via4",
+            "name": "VIA4",
             "icon": "settings_input_antenna"
         }, {
             "name": "HDMI4",
             "icon": "settings_input_hdmi"
         }, {
-            "name": "Via5",
+            "name": "VIA5",
             "icon": "settings_input_antenna"
         }, {
             "name": "HDMI5",
             "icon": "settings_input_hdmi"
         }, {
-            "name": "Via6",
+            "name": "VIA6",
             "icon": "settings_input_antenna"
         }, {
             "name": "HDMI6",
             "icon": "settings_input_hdmi"
         }, {
-            "name": "Via7",
+            "name": "VIA7",
             "icon": "settings_input_antenna"
         }, {
             "name": "HDMI7",
             "icon": "settings_input_hdmi"
         }, {
-            "name": "Via8",
+            "name": "VIA8",
             "icon": "settings_input_antenna"
         }, {
             "name": "HDMI8",
@@ -462,10 +462,10 @@
 			"name": "D6",
 			"icon": "tv",
 			"inputs": [
-				"Via6",
+				"VIA6",
 				"HDMI6"	
 			],
-			"defaultinput": "Via6"
+			"defaultinput": "VIA6"
 		}],
 		"audio": [{
 			"displays": [
@@ -489,49 +489,49 @@
 	"CTB-410-CP7": {
 		"ui": "circle-default",
         "inputdevices": [{
-           	"name": "Via1",
+           	"name": "VIA1",
             "icon": "settings_input_antenna"
         }, {
             "name": "HDMI1",
             "icon": "settings_input_hdmi"
         },{
-            "name": "Via2",
+            "name": "VIA2",
             "icon": "settings_input_antenna"
         }, {
             "name": "HDMI2",
             "icon": "settings_input_hdmi"
         }, {
-            "name": "Via3",
+            "name": "VIA3",
             "icon": "settings_input_antenna"
         }, {
             "name": "HDMI3",
             "icon": "settings_input_hdmi"
         }, {
-            "name": "Via4",
+            "name": "VIA4",
             "icon": "settings_input_antenna"
         }, {
             "name": "HDMI4",
             "icon": "settings_input_hdmi"
         }, {
-            "name": "Via5",
+            "name": "VIA5",
             "icon": "settings_input_antenna"
         }, {
             "name": "HDMI5",
             "icon": "settings_input_hdmi"
         }, {
-            "name": "Via6",
+            "name": "VIA6",
             "icon": "settings_input_antenna"
         }, {
             "name": "HDMI6",
             "icon": "settings_input_hdmi"
         }, {
-            "name": "Via7",
+            "name": "VIA7",
             "icon": "settings_input_antenna"
         }, {
             "name": "HDMI7",
             "icon": "settings_input_hdmi"
         }, {
-            "name": "Via8",
+            "name": "VIA8",
             "icon": "settings_input_antenna"
         }, {
             "name": "HDMI8",
@@ -541,10 +541,10 @@
 			"name": "D7",
 			"icon": "tv",
 			"inputs": [
-				"Via7",
+				"VIA7",
 				"HDMI7"	
 			],
-			"defaultinput": "Via7"
+			"defaultinput": "VIA7"
 		}],
 		"audio": [{
 			"displays": [
@@ -568,49 +568,49 @@
 	"CTB-410-CP8": {
 		"ui": "circle-default",
         "inputdevices": [{
-           	"name": "Via1",
+           	"name": "VIA1",
             "icon": "settings_input_antenna"
         }, {
             "name": "HDMI1",
             "icon": "settings_input_hdmi"
         },{
-            "name": "Via2",
+            "name": "VIA2",
             "icon": "settings_input_antenna"
         }, {
             "name": "HDMI2",
             "icon": "settings_input_hdmi"
         }, {
-            "name": "Via3",
+            "name": "VIA3",
             "icon": "settings_input_antenna"
         }, {
             "name": "HDMI3",
             "icon": "settings_input_hdmi"
         }, {
-            "name": "Via4",
+            "name": "VIA4",
             "icon": "settings_input_antenna"
         }, {
             "name": "HDMI4",
             "icon": "settings_input_hdmi"
         }, {
-            "name": "Via5",
+            "name": "VIA5",
             "icon": "settings_input_antenna"
         }, {
             "name": "HDMI5",
             "icon": "settings_input_hdmi"
         }, {
-            "name": "Via6",
+            "name": "VIA6",
             "icon": "settings_input_antenna"
         }, {
             "name": "HDMI6",
             "icon": "settings_input_hdmi"
         }, {
-            "name": "Via7",
+            "name": "VIA7",
             "icon": "settings_input_antenna"
         }, {
             "name": "HDMI7",
             "icon": "settings_input_hdmi"
         }, {
-            "name": "Via8",
+            "name": "VIA8",
             "icon": "settings_input_antenna"
         }, {
             "name": "HDMI8",
@@ -620,10 +620,10 @@
 			"name": "D8",
 			"icon": "tv",
 			"inputs": [
-				"Via8",
+				"VIA8",
 				"HDMI8"	
 			],
-			"defaultinput": "Via8"
+			"defaultinput": "VIA8"
 		}],
 		"audio": [{
 			"displays": [
