--- a/MSRB-123/config.json
+++ b/MSRB-123/config.json
@@ -23,6 +23,7 @@
             "name": "D1",
             "icon": "tv",
             "inputs": [
+				"HDMI1",
                 "HDMI2",
 				"HDMI3"
             ],
