--- a/ITB-1101/config.json
+++ b/ITB-1101/config.json
@@ -1,9 +1,7 @@
 {
 	"apiconfig": {
 		"enabled": true,
-		"1": "ITB-1101-CP2.byu.edu",
-		"2": "ITB-1101-CP1.byu.edu",
-		"3": "localhost"
+		"1": "ITB-1101-CP1.byu.edu"
 	},
     "ITB-1101-CP1": {
         "ui": "circle-default",
