If your car won't start, try getting out and then back in again

--- a/ITB-3006/config.json
+++ b/ITB-3006/config.json
@@ -6,7 +6,7 @@
         "ui": "circle-default",
         "inputdevices": [{
                 "name": "Via",
-                "icon": "airplay"
+                "icon": "settings_input_antenna"
             },
             {
                 "name": "Table",
