--- a/ITB-1101/config.json
+++ b/ITB-1101/config.json
@@ -109,6 +109,60 @@
             "group-input"
         ]
     },
+    "ITB-1101-CP3": {
+        "ui": "circle-default",
+        "inputdevices": [{
+                "name": "VIA1",
+                "icon": "settings_input_antenna"
+            },
+            {
+                "name": "PC1",
+                "icon": "desktop_windows"
+            },
+            {
+                "name": "AppleTV",
+                "icon": "airplay"
+            },
+            {
+                "name": "ChromeCast",
+                "icon": "cast"
+            }
+        ],
+        "displays": [{
+            "name": "D3",
+            "icon": "tv",
+            "inputs": [
+                "VIA1",
+                "PC1",
+                "AppleTV",
+                "ChromeCast"
+            ],
+            "defaultinput": "AppleTV"
+        }],
+        "audio": [{
+                "displays": [
+                    "D3"
+                ],
+                "audiodevices": [
+                    "D3"
+                ]
+            },
+            {
+                "displays": [
+                    "dta"
+                ],
+                "audiodevices": [
+                    "DSP1"
+                ]
+            }
+        ],
+        "features": [
+            "display-to-all",
+            "power-off-all",
+            "group-input"
+        ]
+    }
+},
     "ITB-1101-CP4": {
         "ui": "circle-default",
         "inputdevices": [{
