--- a/ITB-3310/config.json
+++ b/ITB-3310/config.json
@@ -17,7 +17,7 @@
             "icon": "tv",
             "inputs": [
                 "Table",
-                "Via"
+                "VIA1"
             ],
             "defaultinput": "Table"
         }],
