--- a/ITB-1101/config.json
+++ b/ITB-1101/config.json
@@ -1,4 +1,10 @@
 {
+	"api": [
+		"ITB-1101-CP1",
+		"ITB-1101-CP2",
+		"ITB-1101-CP3",
+		"ITB-1101-CP4"
+	],
 	"presets": [
 		{
 			"name": "Danny Flatpanel",
