joe flatpanel inputs

--- a/ITB-1101/config.json
+++ b/ITB-1101/config.json
@@ -44,6 +44,10 @@
 				"D4"
 			],
 			"inputs": [
+                "VIA1",
+                "PC1",
+                "AppleTV",
+                "ChromeCast"
 			]
 		},
 		{
