--- a/MCKB-267/config.json
+++ b/MCKB-267/config.json
@@ -3,7 +3,7 @@
 		"enabled": false,
 		"1": "localhost"
 	},
-    "JFSB-B161-CP1": {
+    "MCKB-267-CP1": {
         "ui": "circle-default",
         "inputdevices": [
 			{
