--- a/ITB-1101/config.json
+++ b/ITB-1101/config.json
@@ -1,9 +1,9 @@
 {
 	"api": [
-		"ITB-1101-CP1",
-		"ITB-1101-CP2",
-		"ITB-1101-CP3",
-		"ITB-1101-CP4"
+		"ITB-1101-CP1.byu.edu",
+		"ITB-1101-CP2.byu.edu",
+		"ITB-1101-CP3.byu.edu",
+		"ITB-1101-CP4.byu.edu"
 	],
 	"presets": [
 		{
