room wide audios

--- a/ITB-1101/config.json
+++ b/ITB-1101/config.json
@@ -138,5 +138,8 @@
             "name": "HDMI1",
             "icon": "settings_input_hdmi"
         }
+    ],
+    "roomWideAudios": [
+        "D2"
     ]
 }
