--- a/ITB-1101/config.json
+++ b/ITB-1101/config.json
@@ -17,9 +17,7 @@
 			],
 			"inputs": [
                 "VIA1",
-                "PC1",
-                "AppleTV",
-                "ChromeCast"
+                "AppleTV"
 			]
 		},
 		{
