--- a/ITB-1101/config.json
+++ b/ITB-1101/config.json
@@ -135,6 +135,14 @@
         {
             "name": "HDMI1",
             "icon": "settings_input_hdmi"
+        },
+        {
+            "name": "HDMI2",
+            "icon": "settings_input_hdmi"
+        },
+        {
+            "name": "HDMI3",
+            "icon": "settings_input_hdmi"
         }
     ],
     "roomWideAudios": [
