added display to all feature

--- a/ITB-1101/config.json
+++ b/ITB-1101/config.json
@@ -76,6 +76,7 @@
 				"40\" Flatpanels"
 			],
 			"features": [
+                "display-to-all"
 			],
 			"independentAudios": [
 			]
@@ -88,6 +89,7 @@
 				"40\" Flatpanels"
 			],
 			"features": [
+                "display-to-all"
 			],
 			"independentAudios": [
 			]
