added display to all in 1106b

--- a/ITB-1106B/newconfig.json
+++ b/ITB-1106B/newconfig.json
@@ -65,6 +65,7 @@
 				"Projector"
 			],
 			"features": [
+                "display-to-all"
 			],
 			"independentAudios": [
 			]
@@ -76,6 +77,7 @@
 				"Flatpanel"
 			],
 			"features": [
+                "display-to-all"
 			],
 			"independentAudios": [
 			]
