--- a/ITB-1106B/config.json
+++ b/ITB-1106B/config.json
@@ -13,7 +13,7 @@
         },
         {
             "name": "HDMI2",
-            "icon": "setttings_input_hdmi"
+            "icon": "settings_input_hdmi"
         },
         {
             "name": "VIA2",
@@ -33,8 +33,6 @@
 				"D2"
 			],
 			"inputs": [
-                "HDMI1",
-                "VIA1",
                 "HDMI2",
                 "VIA2"
 			]
@@ -50,9 +48,7 @@
 			],
 			"inputs": [
                 "HDMI1",
-                "VIA1",
-                "HDMI2",
-                "VIA2"
+                "VIA1"
 			]
 		}
 	],
