--- a/ITB-1110/config.json
+++ b/ITB-1110/config.json
@@ -10,6 +10,10 @@
         {
             "name": "IPTV",
             "icon": "live_tv"
+        },
+        {
+            "name": "AppleTV",
+            "icon": "airplay"
         }
     ],
     "roomWideAudios": [
