--- a/ITB-1110/config.json
+++ b/ITB-1110/config.json
@@ -30,7 +30,8 @@
 			],
 			"inputs": [
                 "PC1",
-                "IPTV"
+                "IPTV",
+                "AppleTV"
 			]
 		}
 	],
