--- a/CTB-410/config.json
+++ b/CTB-410/config.json
@@ -1,640 +1,286 @@
 {
-	"apiconfig": {
-		"enabled": true,
-		"1": "CTB-410-CP1.byu.edu"
-	},
-	"CTB-410-CP1": {
-		"ui": "circle-default",
-        "inputdevices": [{
-           	"name": "VIA1",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI1",
-            "icon": "settings_input_hdmi"
-        },{
-            "name": "VIA2",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI2",
-            "icon": "settings_input_hdmi"
-        }, {
-            "name": "VIA3",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI3",
-            "icon": "settings_input_hdmi"
-        }, {
-            "name": "VIA4",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI4",
-            "icon": "settings_input_hdmi"
-        }, {
-            "name": "VIA5",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI5",
-            "icon": "settings_input_hdmi"
-        }, {
-            "name": "VIA6",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI6",
-            "icon": "settings_input_hdmi"
-        }, {
-            "name": "VIA7",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI7",
-            "icon": "settings_input_hdmi"
-        }, {
-            "name": "VIA8",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI8",
-            "icon": "settings_input_hdmi"
-		}],
-		"displays": [{
-			"name": "D1",
-			"icon": "videocam",
-			"inputs": [
-				"VIA1",
-				"HDMI1"	
-			],
-			"defaultinput": "VIA1"
-		}],
-		"audio": [{
+	"api": [
+		"CTB-410-CP1.byu.edu"
+	],
+	"presets": [
+		{
+			"name": "Station 1",
 			"displays": [
-				"D1"	
+				"D1"
 			],
-			"audiodevices": [
-				"D1"	
-			]
-		}, {
-			"displays": [
-				"dta"	
-			],
-			"audiodevices": [
-				"D1"	
-			]
-		}],
-		"features": [
-			"display-to-all",
-			"power-off-all"
-		]
-	},
-	"CTB-410-CP2": {
-		"ui": "circle-default",
-        "inputdevices": [{
-           	"name": "VIA1",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI1",
-            "icon": "settings_input_hdmi"
-        },{
-            "name": "VIA2",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI2",
-            "icon": "settings_input_hdmi"
-        }, {
-            "name": "VIA3",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI3",
-            "icon": "settings_input_hdmi"
-        }, {
-            "name": "VIA4",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI4",
-            "icon": "settings_input_hdmi"
-        }, {
-            "name": "VIA5",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI5",
-            "icon": "settings_input_hdmi"
-        }, {
-            "name": "VIA6",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI6",
-            "icon": "settings_input_hdmi"
-        }, {
-            "name": "VIA7",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI7",
-            "icon": "settings_input_hdmi"
-        }, {
-            "name": "VIA8",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI8",
-            "icon": "settings_input_hdmi"
-		}],
-		"displays": [{
-			"name": "D2",
 			"icon": "tv",
+			"audioDevices": [
+				"D1"
+			],
 			"inputs": [
-				"VIA2",
-				"HDMI2"	
-			],
-			"defaultinput": "VIA2"
-		}],
-		"audio": [{
-			"displays": [
-				"D2"	
-			],
-			"audiodevices": [
-				"D2"	
+                "HDMI1",
+                "VIA1"
 			]
-		}, {
+		},
+		{
+			"name": "Station 2",
 			"displays": [
-				"dta"	
+				"D2"
 			],
-			"audiodevices": [
-				"D1"	
-			]
-		}],
-		"features": [
-			"display-to-all"
-		]
-	},
-	"CTB-410-CP3": {
-		"ui": "circle-default",
-        "inputdevices": [{
-           	"name": "VIA1",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI1",
-            "icon": "settings_input_hdmi"
-        },{
-            "name": "VIA2",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI2",
-            "icon": "settings_input_hdmi"
-        }, {
-            "name": "VIA3",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI3",
-            "icon": "settings_input_hdmi"
-        }, {
-            "name": "VIA4",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI4",
-            "icon": "settings_input_hdmi"
-        }, {
-            "name": "VIA5",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI5",
-            "icon": "settings_input_hdmi"
-        }, {
-            "name": "VIA6",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI6",
-            "icon": "settings_input_hdmi"
-        }, {
-            "name": "VIA7",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI7",
-            "icon": "settings_input_hdmi"
-        }, {
-            "name": "VIA8",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI8",
-            "icon": "settings_input_hdmi"
-		}],
-		"displays": [{
-			"name": "D3",
 			"icon": "tv",
+			"audioDevices": [
+				"D2"
+			],
 			"inputs": [
-				"VIA3",
-				"HDMI3"	
-			],
-			"defaultinput": "VIA3"
-		}],
-		"audio": [{
-			"displays": [
-				"D3"	
-			],
-			"audiodevices": [
-				"D3"	
+                "HDMI2",
+                "VIA2"
 			]
-		}, {
+		},
+		{
+			"name": "Station 3",
 			"displays": [
-				"dta"	
+				"D3"
 			],
-			"audiodevices": [
-				"D1"	
-			]
-		}],
-		"features": [
-			"display-to-all"
-		]
-	},
-	"CTB-410-CP4": {
-		"ui": "circle-default",
-        "inputdevices": [{
-           	"name": "VIA1",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI1",
-            "icon": "settings_input_hdmi"
-        },{
-            "name": "VIA2",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI2",
-            "icon": "settings_input_hdmi"
-        }, {
-            "name": "VIA3",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI3",
-            "icon": "settings_input_hdmi"
-        }, {
-            "name": "VIA4",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI4",
-            "icon": "settings_input_hdmi"
-        }, {
-            "name": "VIA5",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI5",
-            "icon": "settings_input_hdmi"
-        }, {
-            "name": "VIA6",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI6",
-            "icon": "settings_input_hdmi"
-        }, {
-            "name": "VIA7",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI7",
-            "icon": "settings_input_hdmi"
-        }, {
-            "name": "VIA8",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI8",
-            "icon": "settings_input_hdmi"
-		}],
-		"displays": [{
-			"name": "D4",
 			"icon": "tv",
+			"audioDevices": [
+				"D3"
+			],
 			"inputs": [
-				"VIA4",
-				"HDMI4"	
-			],
-			"defaultinput": "VIA4"
-		}],
-		"audio": [{
-			"displays": [
-				"D4"	
-			],
-			"audiodevices": [
-				"D4"	
+                "HDMI3",
+                "VIA3"
 			]
-		}, {
+		},
+		{
+			"name": "Station 4",
 			"displays": [
-				"dta"	
+				"D4"
 			],
-			"audiodevices": [
-				"D1"	
-			]
-		}],
-		"features": [
-			"display-to-all"
-		]
-	},
-	"CTB-410-CP5": {
-		"ui": "circle-default",
-        "inputdevices": [{
-           	"name": "VIA1",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI1",
-            "icon": "settings_input_hdmi"
-        },{
-            "name": "VIA2",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI2",
-            "icon": "settings_input_hdmi"
-        }, {
-            "name": "VIA3",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI3",
-            "icon": "settings_input_hdmi"
-        }, {
-            "name": "VIA4",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI4",
-            "icon": "settings_input_hdmi"
-        }, {
-            "name": "VIA5",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI5",
-            "icon": "settings_input_hdmi"
-        }, {
-            "name": "VIA6",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI6",
-            "icon": "settings_input_hdmi"
-        }, {
-            "name": "VIA7",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI7",
-            "icon": "settings_input_hdmi"
-        }, {
-            "name": "VIA8",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI8",
-            "icon": "settings_input_hdmi"
-		}],
-		"displays": [{
-			"name": "D5",
 			"icon": "tv",
+			"audioDevices": [
+				"D4"
+			],
 			"inputs": [
-				"VIA5",
-				"HDMI5"	
-			],
-			"defaultinput": "VIA5"
-		}],
-		"audio": [{
-			"displays": [
-				"D5"	
-			],
-			"audiodevices": [
-				"D5"	
+                "HDMI4",
+                "VIA4"
 			]
-		}, {
+		},
+		{
+			"name": "Station 5",
 			"displays": [
-				"dta"	
+				"D5"
 			],
-			"audiodevices": [
-				"D1"	
-			]
-		}],
-		"features": [
-			"display-to-all"
-		]
-	},
-	"CTB-410-CP6": {
-		"ui": "circle-default",
-        "inputdevices": [{
-           	"name": "VIA1",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI1",
-            "icon": "settings_input_hdmi"
-        },{
-            "name": "VIA2",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI2",
-            "icon": "settings_input_hdmi"
-        }, {
-            "name": "VIA3",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI3",
-            "icon": "settings_input_hdmi"
-        }, {
-            "name": "VIA4",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI4",
-            "icon": "settings_input_hdmi"
-        }, {
-            "name": "VIA5",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI5",
-            "icon": "settings_input_hdmi"
-        }, {
-            "name": "VIA6",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI6",
-            "icon": "settings_input_hdmi"
-        }, {
-            "name": "VIA7",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI7",
-            "icon": "settings_input_hdmi"
-        }, {
-            "name": "VIA8",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI8",
-            "icon": "settings_input_hdmi"
-		}],
-		"displays": [{
-			"name": "D6",
 			"icon": "tv",
+			"audioDevices": [
+				"D5"
+			],
 			"inputs": [
-				"VIA6",
-				"HDMI6"	
-			],
-			"defaultinput": "VIA6"
-		}],
-		"audio": [{
-			"displays": [
-				"D6"	
-			],
-			"audiodevices": [
-				"D6"	
+                "HDMI5",
+                "VIA5"
 			]
-		}, {
+		},
+		{
+			"name": "Station 6",
 			"displays": [
-				"dta"	
+				"D6"
 			],
-			"audiodevices": [
-				"D1"	
-			]
-		}],
-		"features": [
-			"display-to-all"
-		]
-	},
-	"CTB-410-CP7": {
-		"ui": "circle-default",
-        "inputdevices": [{
-           	"name": "VIA1",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI1",
-            "icon": "settings_input_hdmi"
-        },{
-            "name": "VIA2",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI2",
-            "icon": "settings_input_hdmi"
-        }, {
-            "name": "VIA3",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI3",
-            "icon": "settings_input_hdmi"
-        }, {
-            "name": "VIA4",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI4",
-            "icon": "settings_input_hdmi"
-        }, {
-            "name": "VIA5",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI5",
-            "icon": "settings_input_hdmi"
-        }, {
-            "name": "VIA6",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI6",
-            "icon": "settings_input_hdmi"
-        }, {
-            "name": "VIA7",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI7",
-            "icon": "settings_input_hdmi"
-        }, {
-            "name": "VIA8",
-            "icon": "settings_input_antenna"
-        }, {
-            "name": "HDMI8",
-            "icon": "settings_input_hdmi"
-		}],
-		"displays": [{
-			"name": "D7",
 			"icon": "tv",
-			"inputs": [
-				"VIA7",
-				"HDMI7"	
+			"audioDevices": [
+				"D6"
 			],
-			"defaultinput": "VIA7"
-		}],
-		"audio": [{
+			"inputs": [
+                "HDMI6",
+                "VIA6"
+			]
+		},
+		{
+			"name": "Station 7",
 			"displays": [
 				"D7"
 			],
-			"audiodevices": [
-				"D7"	
-			]
-		}, {
-			"displays": [
-				"dta"	
+			"icon": "tv",
+			"audioDevices": [
+				"D7"
 			],
-			"audiodevices": [
-				"D1"	
+			"inputs": [
+                "HDMI7",
+                "VIA7"
 			]
-		}],
-		"features": [
-			"display-to-all"
-		]
-	},
-	"CTB-410-CP8": {
-		"ui": "circle-default",
-        "inputdevices": [{
-           	"name": "VIA1",
+		},
+		{
+			"name": "Station 1",
+			"displays": [
+				"D1"
+			],
+			"icon": "tv",
+			"audioDevices": [
+				"D1"
+			],
+			"inputs": [
+                "HDMI1",
+                "VIA1"
+			]
+		}
+	],
+	"panels": [
+		{
+			"hostname": "CTB-410-CP1",
+			"uipath": "/blueberry",
+			"presets": [
+				"Station 1"
+			],
+			"features": [
+                "display-to-all"
+			],
+			"independentAudios": [
+			]
+		},
+		{
+			"hostname": "CTB-410-CP2",
+			"uipath": "/blueberry",
+			"presets": [
+				"Station 2"
+			],
+			"features": [
+                "display-to-all"
+			],
+			"independentAudios": [
+			]
+		},
+		{
+			"hostname": "CTB-410-CP3",
+			"uipath": "/blueberry",
+			"presets": [
+				"Station 3"
+			],
+			"features": [
+                "display-to-all"
+			],
+			"independentAudios": [
+			]
+		},
+		{
+			"hostname": "CTB-410-CP4",
+			"uipath": "/blueberry",
+			"presets": [
+				"Station 4"
+			],
+			"features": [
+                "display-to-all"
+			],
+			"independentAudios": [
+			]
+		},
+		{
+			"hostname": "CTB-410-CP5",
+			"uipath": "/blueberry",
+			"presets": [
+				"Station 5"
+			],
+			"features": [
+                "display-to-all"
+			],
+			"independentAudios": [
+			]
+		},
+		{
+			"hostname": "CTB-410-CP6",
+			"uipath": "/blueberry",
+			"presets": [
+				"Station 6"
+			],
+			"features": [
+                "display-to-all"
+			],
+			"independentAudios": [
+			]
+		},
+		{
+			"hostname": "CTB-410-CP7",
+			"uipath": "/blueberry",
+			"presets": [
+				"Station 7"
+			],
+			"features": [
+                "display-to-all"
+			],
+			"independentAudios": [
+			]
+		},
+		{
+			"hostname": "CTB-410-CP8",
+			"uipath": "/blueberry",
+			"presets": [
+				"Station 8"
+			],
+			"features": [
+                "display-to-all"
+			],
+			"independentAudios": [
+			]
+		}
+	],
+    "inputConfiguration": [
+        {
+            "name": "VIA1",
             "icon": "settings_input_antenna"
-        }, {
+        },
+        {
             "name": "HDMI1",
             "icon": "settings_input_hdmi"
-        },{
+        },
+        {
             "name": "VIA2",
             "icon": "settings_input_antenna"
-        }, {
+        },
+        {
             "name": "HDMI2",
             "icon": "settings_input_hdmi"
-        }, {
+        },
+        {
             "name": "VIA3",
             "icon": "settings_input_antenna"
-        }, {
+        },
+        {
             "name": "HDMI3",
             "icon": "settings_input_hdmi"
-        }, {
+        },
+        {
             "name": "VIA4",
             "icon": "settings_input_antenna"
-        }, {
+        },
+        {
             "name": "HDMI4",
             "icon": "settings_input_hdmi"
-        }, {
+        },
+        {
             "name": "VIA5",
             "icon": "settings_input_antenna"
-        }, {
+        },
+        {
             "name": "HDMI5",
             "icon": "settings_input_hdmi"
-        }, {
+        },
+        {
             "name": "VIA6",
             "icon": "settings_input_antenna"
-        }, {
+        },
+        {
             "name": "HDMI6",
             "icon": "settings_input_hdmi"
-        }, {
+        },
+        {
             "name": "VIA7",
             "icon": "settings_input_antenna"
-        }, {
+        },
+        {
             "name": "HDMI7",
             "icon": "settings_input_hdmi"
-        }, {
+        },
+        {
             "name": "VIA8",
             "icon": "settings_input_antenna"
-        }, {
+        },
+        {
             "name": "HDMI8",
             "icon": "settings_input_hdmi"
-		}],
-		"displays": [{
-			"name": "D8",
-			"icon": "tv",
-			"inputs": [
-				"VIA8",
-				"HDMI8"	
-			],
-			"defaultinput": "VIA8"
-		}],
-		"audio": [{
-			"displays": [
-				"D8"
-			],
-			"audiodevices": [
-				"D8"	
-			]
-		}, {
-			"displays": [
-				"dta"	
-			],
-			"audiodevices": [
-				"D1"	
-			]
-		}],
-		"features": [
-			"display-to-all"
-		]
-	}
-
+        }
+    ],
+    "roomWideAudios": [
+        "D1"
+    ]
 }
