--- a/ITB-1101/config.json
+++ b/ITB-1101/config.json
@@ -54,7 +54,7 @@
 			"features": [
                 "display-to-all"
 			],
-			"independentAudios": [
+			"independentAudioDevices": [
 			]
 		},
 		{
@@ -66,7 +66,7 @@
 			"features": [
                 "display-to-all"
 			],
-			"independentAudios": [
+			"independentAudioDevices": [
 			]
 		},
 		{
@@ -78,7 +78,7 @@
 			"features": [
                 "display-to-all"
 			],
-			"independentAudios": [
+			"independentAudioDevices": [
 			]
 		}
     ],
