--- a/TMCB-235/config.json
+++ b/TMCB-235/config.json
@@ -27,7 +27,7 @@
 	],
 	"panels": [
 		{
-			"hostname": "MCKB-235-CP1",
+			"hostname": "TMCB-235-CP1",
 			"uipath": "/blueberry",
 			"presets": [
 				"Flatpanel"
