--- a/TMCB-235/config.json
+++ b/TMCB-235/config.json
@@ -30,7 +30,7 @@
 			"hostname": "TMCB-235-CP1",
 			"uipath": "/blueberry",
 			"presets": [
-				"Flatpanel"
+				"Projector"
 			],
 			"features": [
 			],
